--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.khoirullatif.e_learnigacademy">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,8 +11,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ELearnigAcademy">
-        <activity android:name=".HomeActivity">
+        android:theme="@style/Theme.ELearnigAcademy"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".ui.detail.DetailCourseActivity"
+            android:parentActivityName=".ui.home.HomeActivity"
+            android:label="@string/title_activity_detail_course"
+            android:theme="@style/Theme.ELearnigAcademy.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.home.HomeActivity"/>
+        </activity>
+        <activity android:name=".ui.reader.CourseReaderActivity" />
+        <activity android:name=".ui.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
