--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ ext {
     mockitoVersion = '3.6.0'
     mockitoKotlinVersion = '2.2.0'
     androidCoreTestVersion = '2.1.0'
+    idleResourceVersion = '3.2.0'
 
     materialVersion = '1.2.1'
     recyclerViewVersion = '1.1.0'
